# ChangeLog for media-sound/tepsonic
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*tepsonic-0.98.0 (03 Oct 2010)

  03 Oct 2010; Nikoli <nikoli@lavabit.com> -tepsonic-0.97.0.ebuild,
  +tepsonic-0.98.0.ebuild:
  version bump

  21 Aug 2010; Nikoli <nikoli@lavabit.com> tepsonic-9999.ebuild:
  update lastfm dep

  18 Jun 2010; Nikoli <nikoli@lavabit.com> tepsonic-0.97.0.ebuild:
  upstream fixed dir name

*tepsonic-0.97.0 (18 Jun 2010)

  18 Jun 2010; Nikoli <nikoli@lavabit.com> +tepsonic-0.97.0.ebuild:
  version bump

*tepsonic-9999 (10 Jun 2010)

  10 Jun 2010; Nikoli <nikoli@lavabit.com> +tepsonic-9999.ebuild,
  +metadata.xml:
  Initial ebuild
