@@ -1,5 +1,7 @@
 DIST tepsonic-0.98.0-src.tar.gz 693472 RMD160 b174c036d9607374397b5789d2df1a1d03b71252 SHA1 0defcd127311e665a68f4faa6a3eec31f38e5268 SHA256 dbabbd96375f06f4877c9c0513dbd6b0d07519617556e57b5c96fa19be38b3bc
+DIST tepsonic-0.98.2-src.tar.gz 792924 RMD160 c927e85f0ccab0c977e4c528d13624d83b85bec5 SHA1 fabbbcf0156a4b3296a8a3d87dd082fd09b30b2e SHA256 b7ac029f7979f32441535d5cba10b600eaddaccc6d40682239354fe16c98409a
 EBUILD tepsonic-0.98.0.ebuild 1014 RMD160 8e4712dbec7a8eb85d357c0cf2956a6843eefdff SHA1 b2a1de7ef8f305e7f0a1de746e39097d26347efe SHA256 8f2b871eee43677f758075f647b3c06a7593d4e36a6a06ae6645a04a64e215e6
-EBUILD tepsonic-9999.ebuild 1008 RMD160 41469e2b3cff2bff55d568e1450b7bb2eb0d605a SHA1 546d16fd7f9ff57ab54d5ad85c25d0afe54cc0ac SHA256 cde6747650a20a2472abff9cd6b07dac09a74c5bd619f613ef4627015e1db929
-MISC ChangeLog 691 RMD160 d12d1584b5451e74666cb4e522662a87d6bed5db SHA1 02581454d3f81e41e151eeac06886a3aa4af723e SHA256 bc0ce7f72a94c488dfdbae6586d1e0db111e2921b6ed34f2cd2941417c07cf4d
+EBUILD tepsonic-0.98.2.ebuild 1032 RMD160 b29ff200000aa43dcc348ac2f7db630196eabb4f SHA1 9d33e13eb2707b99be526d4f205a45158603339d SHA256 d59b7e35d0d610449ad82d8001462ab135a463c817622fc31868a9c1fd9e6f51
+EBUILD tepsonic-9999.ebuild 1026 RMD160 1745bce24edb2047d569dae492179ef0ba69c46c SHA1 62eee6fe5458d36e60ddba0216c0ae726af8208e SHA256 8df7e5fd02f99c5ea54b98ad3d52e0730ee1c9fa0a617235bdc1c667ee767998
+MISC ChangeLog 848 RMD160 1c5aa7e395f7285c0d90dff76025f8b077ec23aa SHA1 8c8a466154e1f68ea6729403fee1a3974c3d004e SHA256 b9501e1013305bbe2e790d05c332b3204d6b44541dec21951cd7a10b6466d411
 MISC metadata.xml 508 RMD160 e34e582bba2bda4665a9973dd8cc44addb4bb163 SHA1 5da6cb90fff5b2f26c77bb27832e29a2ae3752f2 SHA256 78e600ad12a449d46b94359732bacd7aabb4830495345e3ab204cfec21617816
