@@ -1,6 +1,12 @@
 # ChangeLog for media-sound/tepsonic
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*tepsonic-0.98.2 (20 Mar 2011)
+
+  20 Mar 2011; Nikoli <nikoli@lavabit.com> +tepsonic-0.98.2.ebuild,
+  tepsonic-9999.ebuild:
+  version bump, fix live ebuild
 
 *tepsonic-0.98.0 (03 Oct 2010)
 
